--- a/test/test_projection_1.html
+++ b/test/test_projection_1.html
@@ -184,8 +184,12 @@ and open the template in the editor.
                     <img class="depth1790" src="http://fakeimg.pl/150/723bff/fff?text=5" />
                 </section>
                 
+                <div id="gesture-icons">
+                    <span>Touch Zone !!</span>
+                    <img src="img/spread.png" alt="spread" width="25" />
+                    <img src="img/pinch.png" alt="pinch" width="25" />
+                </div>
                 <div id="touch-zone">
-                    <span>Spread / Pinch</span>
                 </div>
             </div>
             <div id="levels-zone">
