add layer over the touch zone

--- a/test/test_projection_2.html
+++ b/test/test_projection_2.html
@@ -324,6 +324,7 @@ and open the template in the editor.
                 </div>
             </div>
             <div id="touch-zone">
+                <div id="touch-layer"></div>
                 <div id="touch-infos">
                     <p>
                         <img src="img/test2/enlarge.png" alt="enlarge" /><br />
