--- a/test/test_projection_1.html
+++ b/test/test_projection_1.html
@@ -1,7 +1,3 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
     <head>
@@ -186,8 +182,8 @@ and open the template in the editor.
                 
                 <div id="touch-zone">
                     <span>Touch Zone !!</span>
-                    <img src="img/spread.png" alt="spread" width="25" />
-                    <img src="img/pinch.png" alt="pinch" width="25" />
+                    <img src="img/test1/spread.png" alt="spread" width="25" />
+                    <img src="img/test1/pinch.png" alt="pinch" width="25" />
                     <div class="white-zone"></div>
                 </div>
             </div>
